--- a/project-status-management--sem5-patch1/reportleader.html
+++ b/project-status-management--sem5-patch1/reportleader.html
@@ -21,6 +21,10 @@
         <div class="text-center mx-auto">
             <h1>Project Status Management System</h1>
         </div>
+        <div class="mr-3">
+            <a href="setting.html"> <img src="img/avtar.png" alt="Avatar" class="rounded-circle" style="width: 60px">
+            </a>
+        </div>
         <a class="btn btn-primary" href="login.html" role="button">Logout</a>
 
     </nav>
@@ -30,13 +34,22 @@
 
         <div class="row">
             <div class="col ">
-                <h5 class="mt-1">Reports</h5>
+                <h5 class="text-center mt-1">Reports</h5>
+                <div class="list-group">
+                    <button type="button" class="list-group-item list-group-item-action text-center active">
+                      Report 1
+                    </button>
+                    <button type="button" class="list-group-item list-group-item-action text-center">Report 2</button>
+                    <button type="button" class="list-group-item list-group-item-action text-center">Report 3</button>
+                    <button type="button" class="list-group-item list-group-item-action text-center">Report 4</button>
+                    <button type="button" class="list-group-item list-group-item-action text-center">Report 5</button>
+                  </div>
 
             </div>
             <div class="col-lg">
 
                 <div class="text-center">
-                    <h2>Report Heading 3</h2>
+                    <h2>Report Heading 1</h2>
                     <h5>Project Name: Project Status Management</h5>
                 </div>
                 <h6>From : leader1</h6>
