--- a/project-status-management--sem5-patch1/login.html
+++ b/project-status-management--sem5-patch1/login.html
@@ -32,7 +32,7 @@
   </div>
   <div class="container text-center">
 
-    <form method="POST" action="home.html">
+    <form method="POST" action="hodhome.html">
       <div class="row mt-5 mx-auto" style="width: 300px">
         <div class="col">
           <label for="inputlg" class="font-weight-bold">Email</label>
