--- a/project-status-management--sem5-patch1/newreport.html
+++ b/project-status-management--sem5-patch1/newreport.html
@@ -22,8 +22,8 @@
             <h1>Project Status Management System</h1>
         </div>
         <div class="mr-3">
-            <img src="img/avtar.png" alt="Avatar" class="rounded-circle" style="width: 60px">
-
+            <a href="setting.html"> <img src="img/avtar.png" alt="Avatar" class="rounded-circle" style="width: 60px">
+            </a>
         </div>
         <a class="btn btn-primary" href="login.html" role="button">Logout</a>
 
@@ -38,7 +38,7 @@
     </div>
     <div class="container text-center">
 
-        <form method="POST" action="home.html">
+        <form method="POST" action="reportleader.html">
             <div class="row mt-5 mx-auto" style="width: 300px">
                 <div class="col">
                     <label for="inputlg" class="font-weight-bold">Project Title</label>
